fixing line break in sets

--- a/dominion.css
+++ b/dominion.css
@@ -31,7 +31,7 @@ article {
 }
 
 .disclaimer, .sets, .button-wrapper {
-	width: 80%;
+	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
